lib/bait/tests/inout_error/struct/required_field.out
lib/bait/tests/inout_error/struct/required_field.in.bt:10:9 error: field "Spam.n" requires initialization
lib/bait/tests/inout_error/struct/required_field.in.bt:14:10 error: field "Spam.eggs" requires initialization
